src/parser/snapshots/monkey_language_server__parser__test__fn_call_unhappy_3_errors.snap
---
source: src/parser/test.rs
description: add(x y)
expression: "parser_errors(\"add(x y)\", errors)"
---
add(x y)
      ^ SyntaxError: Expected ',' not found.
