src/parser/snapshots/monkey_language_server__parser__test__fn_call_unhappy_5_errors.snap
---
source: src/parser/test.rs
description: "add(, x)"
expression: "parser_errors(\"add(, x)\", errors)"
---
add(, x)
    ^ SyntaxError: Unexpected ','.
