src/parser/snapshots/monkey_language_server__parser__test__fn_call_unhappy_8_errors.snap
---
source: src/parser/test.rs
description: add(@)
expression: "parser_errors(\"add(@)\", errors)"
---
add(@)
    ^ SyntaxError: Unexpected '@'.
