src/parser/snapshots/monkey_language_server__parser__test__fn_expr_happy_1.snap
---
source: src/parser/test.rs
description: "fn() {}"
expression: result
---
[
    Function {
        token: Token(Function, "fn", (0,0)->(0,2)),
        params: Ok(
            [],
        ),
        body: Ok(
            Block {
                token: Token(LBrace, "{", (0,5)->(0,6)),
                statements: [],
                range: Range {
                    start: Position {
                        line: 0,
                        character: 5,
                    },
                    end: Position {
                        line: 0,
                        character: 6,
                    },
                },
            },
        ),
        range: Range {
            start: Position {
                line: 0,
                character: 0,
            },
            end: Position {
                line: 0,
                character: 7,
            },
        },
    },
]

===================================

fn() {}
