src/parser/snapshots/monkey_language_server__parser__test__fn_expr_happy_1_errors.snap
---
source: src/parser/test.rs
description: "fn() {}"
expression: "parser_errors(\"fn() {}\", errors)"
---
fn() {}
