src/parser/snapshots/monkey_language_server__parser__test__fn_expr_happy_2_errors.snap
---
source: src/parser/test.rs
description: "fn(x) {}"
expression: "parser_errors(\"fn(x) {}\", errors)"
---
fn(x) {}
